--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,7 @@
 
 body {
     font-family: montserrat, sans-serif;
+    min-height: 150vh;
 }
 
 header {
@@ -129,4 +130,5 @@ header {
     background: white;
     color: var(--blue);
     border-radius: 5px;
+    margin-top: 15px;
 }
