--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 :root {
-    --white : #faf4f9;
-    --blue : #0d80e9;
+    --white: #faf4f9;
+    --blue: #0d80e9;
 }
 
 * {
@@ -11,7 +11,7 @@
 
 body {
     font-family: "Montserrat", sans-serif;
-    /* min-height: 200vh; */
+    height: 100vh;
     font-size: 16px;
     cursor: default;
     background: var(--white);
@@ -68,9 +68,8 @@ header {
     width: 100%;
     display: flex;
     align-items: center;
-    justify-content: center; 
+    justify-content: center;
     height: 80px;
-    padding: 0 20px;
 }
 
 nav.primary-navigation {
@@ -79,6 +78,7 @@ nav.primary-navigation {
     justify-content: space-between;
     width: min(100%, 1300px);
     height: 100%;
+    padding: 0 20px;
 }
 
 nav.primary-navigation .image-container {
@@ -87,12 +87,18 @@ nav.primary-navigation .image-container {
 
 nav.primary-navigation .menu {
     margin: auto !important;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
 }
 
 nav.primary-navigation .menu li {
-    display: inline-block;
+    height: 40px;
     width: 100px;
-    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 nav.primary-navigation .menu li a:hover {
@@ -100,7 +106,13 @@ nav.primary-navigation .menu li a:hover {
     transition: 0.3s;
 }
 
-nav.primary-navigation .button a {
+nav.primary-navigation .buttons {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+nav.primary-navigation .buttons a {
     width: 35px;
     aspect-ratio: 1/1;
     display: flex;
@@ -108,17 +120,124 @@ nav.primary-navigation .button a {
     align-items: center;
     border: 1px solid black;
     border-radius: 50%;
+    margin: 3px;
 }
 
+.menu-toggle {
+    display: none;
+}
+
+@media (max-width: 900px) {
+    header nav.primary-navigation {
+        position: relative;
+        padding: 0 7px;
+    }
+
+    nav.primary-navigation .menu {
+        position: absolute;
+        display: none;
+        top: 100%;
+        /* bottom: 0; */
+        background: var(--blue);
+        left: 0;
+        width: 100%;
+        text-align: center;
+        margin: 0;
+    }
+
+    nav.primary-navigation .buttons {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .menu-toggle {
+        margin-left: 3px;
+        cursor: pointer;
+        display: block;
+    }
+
+    header .primary-navigation .menu-toggle span.bar {
+        width: 25px;
+        height: 3px;
+        background: black;
+        display: block;
+        margin: 3px;
+        transition: 0.3s;
+        border-radius: 10px;
+    }
+
+    header .primary-navigation .menu-toggle.active span.bar:nth-child(2) {
+        opacity: 0;
+    }
+
+    header .primary-navigation .menu-toggle.active span.bar:nth-child(1) {
+        transform: translateY(6px) rotate(45deg);
+    }
+
+    header .primary-navigation .menu-toggle.active span.bar:nth-child(3) {
+        transform: translateY(-6px) rotate(-45deg);
+    }
+
+    header .primary-navigation .menu {
+        display: none;
+    }
+
+    .mobile-menu.active {
+        opacity: 1;
+        pointer-events: all;
+        bottom: 0;
+    }
+}
+
+.mobile-menu {
+    position: fixed;
+    bottom: -1000px;
+    background: var(--blue);
+    width: 100%;
+    left: 0;
+    padding: 20px;
+    border-radius: 10px 10px 0 0;
+    opacity: 0;
+    pointer-events: none;
+    transition: 0.3s;
+}
+
+.mobile-menu ul {
+    width: min(100%, 500px);
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+    gap: 10px;
+    margin: auto;
+}
+
+.mobile-menu ul li {
+    aspect-ratio: 1 / 1;
+    list-style: none;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.mobile-menu ul li a {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    padding: 0 10px;
+    gap: 1rem;
+}
 
 /* hero section */
 section#hero {
-    min-height: 600px;
+    min-height: 400px;
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 30px;
+    padding: 30px 30px 200px 30px;
 }
 
 section#hero .container {
@@ -144,6 +263,7 @@ section#hero .container .buttons {
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-wrap: wrap;
     gap: 1rem;
 }
 
@@ -160,7 +280,15 @@ section#ad .container {
 
 section#ad .container .image-container {
     width: min(100%, 400px);
-    margin-top: -150px;
+    margin-top: -170px;
+}
+
+@media (max-width: 601px) {
+    section#ad .container {
+        width: min(100%, 1100px);
+        margin: auto;
+        padding: 50px 0;
+    }
 }
 
 section#ad .container .text {
@@ -168,9 +296,88 @@ section#ad .container .text {
     display: grid;
     grid-template-columns: auto;
     gap: 14px;
+    padding: 15px;
 }
 
 section#ad .container .text h3 {
     font-weight: 300;
     font-size: 2rem;
+}
+
+/* banner */
+section#banner {
+    background: url("../images/background2.jpg") #00000040 fixed;
+    background-position: center;
+    height: 300px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-blend-mode: multiply;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+section#banner h5 {
+    font-size: 2.5rem;
+    font-weight: 400;
+    width: 95%;
+    max-width: 700px;
+    text-align: center;
+    color: white;
+}
+
+/* shop */
+section#shop {
+    padding: 30px 10px;
+}
+
+section#shop h3 {
+    text-align: center;
+    font-weight: 300;
+    font-size: 2rem;
+}
+
+section#shop .flex-grid {
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    width: min(100%, 1100px);
+    gap: 1rem;
+    margin: auto;
+    padding: 30px;
+}
+
+.product-card {
+    border-radius: 4px;
+    box-shadow: 2px 2px 10px #5a5a5a70;
+    overflow: hidden;
+}
+
+.product-card .image-container {
+    width: 100%;
+    aspect-ratio: 1 / 1;
+}
+
+.product-card .label {
+    height: 60px;
+    text-align: center;
+    display: grid;
+    grid-template-columns: auto;
+    gap: 3px;
+}
+
+.product-name {
+    font-size: 1.5rem;
+    font-weight: 400;
+}
+
+section#shop .button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 10px;
+}
+
+section#shop .button .btn {
+    background: var(--blue);
+    color: var(--white);
+    border: none;
 }
