--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -259,7 +259,7 @@ section#hero .container p {
     color: #5a5a5a;
 }
 
-section#hero .container .buttons {
+.buttons {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -304,9 +304,13 @@ section#ad .container .text h3 {
     font-size: 2rem;
 }
 
+section#ad .container .text .buttons {
+    justify-content: initial;
+}
+
 /* banner */
 section#banner {
-    background: url("../images/background2.jpg") #00000040 fixed;
+    background: url("../images/background2.jpg") #00000040;
     background-position: center;
     height: 300px;
     background-size: cover;
@@ -319,7 +323,7 @@ section#banner {
 
 section#banner h5 {
     font-size: 2.5rem;
-    font-weight: 400;
+    font-weight: 800;
     width: 95%;
     max-width: 700px;
     text-align: center;
@@ -393,23 +397,63 @@ section#map .flex-grid {
 .mapouter {
     position: relative;
     text-align: right;
-    width: min(100%, 500px);
+    height: min(100%, 500px);
     margin: auto;
 }
 
 .gmap_canvas {
     overflow: hidden;
     background: none !important;
-    width: 100%;
-    height: 400px;
+    height: 100%;
+    aspect-ratio: 1 / 1;
 }
 
 .gmap_iframe {
-    height: 400px !important;
+    height: 100% !important;
+}
+
+section#map .locations {
+    padding: 10px;
 }
 
 section#map .locations h5 {
     font-weight: 400;
     font-size: 1.8rem;
     text-align: left;
+}
+
+section#map .locations ul {
+    display: grid;
+    grid-template-columns: auto;
+}
+
+section#map .locations ul li {
+    list-style: none;
+}
+
+section#map .locations ul li.shop-location {
+    display: grid;
+    grid-template-columns: auto;
+    margin: 10px 0;
+    padding: 10px;
+}
+
+section#map .locations ul li.shop-location .buttons {
+    font-size: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 5px;
+    margin: 5px 0;
+}
+
+section#map .locations ul li.shop-location .buttons a {
+    height: 40px;
+    width: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: black;
+    color: white;
+    border-radius: 3px;
 }
