--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,459 +1,479 @@
 :root {
-    --white: #faf4f9;
-    --blue: #0d80e9;
+  --white: #faf4f9;
+  --blue: #0d80e9;
 }
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-    font-family: "Montserrat", sans-serif;
-    height: 100vh;
-    font-size: 16px;
-    cursor: default;
-    background: var(--white);
+  font-family: "Montserrat", sans-serif;
+  height: 100vh;
+  font-size: 16px;
+  cursor: default;
+  background: var(--white);
 }
 
 a {
-    color: inherit;
-    text-decoration: none;
-    font-weight: 500;
+  color: inherit;
+  text-decoration: none;
+  font-weight: 500;
 }
 
 img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    object-position: center;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
 }
 
 .btn {
-    width: 150px;
-    height: 40px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border: 1px solid;
-    border-radius: 4px;
+  width: 150px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid;
+  border-radius: 4px;
 }
 
 .login-btn {
-    color: var(--white);
-    border: none;
-    background: var(--blue) !important;
+  color: var(--white);
+  border: none;
+  background: var(--blue) !important;
 }
 
 .signup-btn {
-    background: var(--white);
-    color: var(--blue);
+  background: var(--white);
+  color: var(--blue);
 }
 
 .flex-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
 }
 
 .flex-wrap {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 
 /* navigation */
 header {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 80px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 80px;
 }
 
 nav.primary-navigation {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: min(100%, 1300px);
-    height: 100%;
-    padding: 0 20px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: min(100%, 1300px);
+  height: 100%;
+  padding: 0 20px;
 }
 
 nav.primary-navigation .image-container {
-    height: 50px;
+  height: 50px;
 }
 
 nav.primary-navigation .menu {
-    margin: auto !important;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 10px;
+  margin: auto !important;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
 }
 
 nav.primary-navigation .menu li {
-    height: 40px;
-    width: 100px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  height: 40px;
+  width: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 nav.primary-navigation .menu li a:hover {
-    color: var(--blue);
-    transition: 0.3s;
+  color: var(--blue);
+  transition: 0.3s;
 }
 
 nav.primary-navigation .buttons {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 5px !important;
 }
 
 nav.primary-navigation .buttons a {
-    width: 35px;
-    aspect-ratio: 1/1;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border: 1px solid black;
-    border-radius: 50%;
-    margin: 3px;
+  width: 30px;
+  aspect-ratio: 1/1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid black;
+  border-radius: 50%;
+  gap: 2px !important;
 }
 
 .menu-toggle {
-    display: none;
+  display: none;
 }
 
 @media (max-width: 900px) {
-    header nav.primary-navigation {
-        position: relative;
-        padding: 0 7px;
-    }
+  header nav.primary-navigation {
+    position: relative;
+    padding: 0 7px;
+  }
 
-    nav.primary-navigation .menu {
-        position: absolute;
-        display: none;
-        top: 100%;
-        /* bottom: 0; */
-        background: var(--blue);
-        left: 0;
-        width: 100%;
-        text-align: center;
-        margin: 0;
-    }
-
-    nav.primary-navigation .buttons {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
-
-    .menu-toggle {
-        margin-left: 3px;
-        cursor: pointer;
-        display: block;
-    }
-
-    header .primary-navigation .menu-toggle span.bar {
-        width: 25px;
-        height: 3px;
-        background: black;
-        display: block;
-        margin: 3px;
-        transition: 0.3s;
-        border-radius: 10px;
-    }
-
-    header .primary-navigation .menu-toggle.active span.bar:nth-child(2) {
-        opacity: 0;
-    }
-
-    header .primary-navigation .menu-toggle.active span.bar:nth-child(1) {
-        transform: translateY(6px) rotate(45deg);
-    }
-
-    header .primary-navigation .menu-toggle.active span.bar:nth-child(3) {
-        transform: translateY(-6px) rotate(-45deg);
-    }
-
-    header .primary-navigation .menu {
-        display: none;
-    }
-
-    .mobile-menu.active {
-        opacity: 1;
-        pointer-events: all;
-        bottom: 0;
-    }
-}
-
-.mobile-menu {
-    position: fixed;
-    bottom: -1000px;
+  nav.primary-navigation .menu {
+    position: absolute;
+    display: none;
+    top: 100%;
+    /* bottom: 0; */
     background: var(--blue);
-    width: 100%;
     left: 0;
-    padding: 20px;
-    border-radius: 10px 10px 0 0;
-    opacity: 0;
-    pointer-events: none;
-    transition: 0.3s;
-}
+    width: 100%;
+    text-align: center;
+    margin: 0;
+  }
 
-.mobile-menu ul {
-    width: min(100%, 500px);
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
-    gap: 10px;
-    margin: auto;
-}
-
-.mobile-menu ul li {
-    aspect-ratio: 1 / 1;
-    list-style: none;
-    color: white;
+  nav.primary-navigation .buttons {
     display: flex;
     align-items: center;
     justify-content: center;
+  }
+
+  .menu-toggle {
+    margin-left: 3px;
+    cursor: pointer;
+    display: block;
+  }
+
+  header .primary-navigation .menu-toggle span.bar {
+    width: 25px;
+    height: 3px;
+    background: black;
+    display: block;
+    margin: 3px;
+    transition: 0.3s;
+    border-radius: 10px;
+  }
+
+  header .primary-navigation .menu-toggle.active span.bar:nth-child(2) {
+    opacity: 0;
+  }
+
+  header .primary-navigation .menu-toggle.active span.bar:nth-child(1) {
+    transform: translateY(6px) rotate(45deg);
+  }
+
+  header .primary-navigation .menu-toggle.active span.bar:nth-child(3) {
+    transform: translateY(-6px) rotate(-45deg);
+  }
+
+  header .primary-navigation .menu {
+    display: none;
+  }
+
+  .mobile-menu.active {
+    opacity: 1;
+    pointer-events: all;
+    bottom: 0;
+  }
+}
+
+.mobile-menu {
+  position: fixed;
+  bottom: -1000px;
+  background: var(--blue);
+  width: 100%;
+  left: 0;
+  padding: 20px;
+  border-radius: 10px 10px 0 0;
+  opacity: 0;
+  pointer-events: none;
+  transition: 0.3s;
+}
+
+.mobile-menu ul {
+  width: min(100%, 500px);
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+  gap: 10px;
+  margin: auto;
+}
+
+.mobile-menu ul li {
+  aspect-ratio: 1 / 1;
+  list-style: none;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .mobile-menu ul li a {
-    height: 100%;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    padding: 0 10px;
-    gap: 1rem;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  padding: 0 10px;
+  gap: 1rem;
 }
 
 /* hero section */
 section#hero {
-    min-height: 400px;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 30px 30px 200px 30px;
+  min-height: 400px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 30px 30px 200px 30px;
 }
 
 section#hero .container {
-    width: min(100%, 700px);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 30px;
-    text-align: center;
+  width: min(100%, 700px);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 30px;
+  text-align: center;
 }
 
 section#hero .container h1 {
-    font-size: 2rem;
-    color: var(--blue);
+  font-size: 2rem;
+  color: var(--blue);
 }
 
 section#hero .container p {
-    color: #5a5a5a;
+  color: #5a5a5a;
 }
 
 .buttons {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
-    gap: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 1rem;
 }
 
 /* ad */
 section#ad {
-    background: var(--blue);
-    color: white;
+  background: var(--blue);
+  color: white;
 }
 
 section#ad .container {
-    width: min(100%, 1100px);
-    margin: auto;
+  width: min(100%, 1100px);
+  margin: auto;
 }
 
 section#ad .container .image-container {
-    width: min(100%, 400px);
-    margin-top: -170px;
+  width: min(100%, 400px);
+  margin-top: -170px;
 }
 
 @media (max-width: 601px) {
-    section#ad .container {
-        width: min(100%, 1100px);
-        margin: auto;
-        padding: 50px 0;
-    }
+  section#ad .container {
+    width: min(100%, 1100px);
+    margin: auto;
+    padding: 50px 0;
+  }
 }
 
 section#ad .container .text {
-    width: min(100%, 500px);
-    display: grid;
-    grid-template-columns: auto;
-    gap: 14px;
-    padding: 15px;
+  width: min(100%, 500px);
+  display: grid;
+  grid-template-columns: auto;
+  gap: 14px;
+  padding: 15px;
 }
 
 section#ad .container .text h3 {
-    font-weight: 300;
-    font-size: 2rem;
+  font-weight: 300;
+  font-size: 2rem;
 }
 
 section#ad .container .text .buttons {
-    justify-content: initial;
+  justify-content: initial;
 }
 
 /* banner */
 section#banner {
-    background: url("../images/background2.jpg") #00000040;
-    background-position: center;
-    height: 300px;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-blend-mode: multiply;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  background: url("../images/background2.jpg") #00000040;
+  background-position: center;
+  min-height: 300px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-blend-mode: multiply;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  color: white;
+  gap: 2rem;
+  padding: 20px;
 }
 
 section#banner h5 {
-    font-size: 2.5rem;
-    font-weight: 800;
-    width: 95%;
-    max-width: 700px;
-    text-align: center;
-    color: white;
+  font-size: 2.5rem;
+  font-weight: 800;
+  width: 95%;
+  max-width: 700px;
+  text-align: center;
+  color: white;
+}
+
+section#banner p {
+  width: min(95%, 500px);
+  text-align: center;
+  font-size: 1.3rem;
+}
+
+section#banner .btn {
+  background: var(--blue);
+  border: none;
 }
 
 /* shop */
 section#shop {
-    padding: 30px 10px;
+  padding: 30px 10px;
 }
 
 section#shop h3 {
-    text-align: center;
-    font-weight: 300;
-    font-size: 2rem;
+  text-align: center;
+  font-weight: 300;
+  font-size: 2rem;
 }
 
 section#shop .flex-grid {
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    width: min(100%, 1100px);
-    gap: 1rem;
-    margin: auto;
-    padding: 30px;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  width: min(100%, 1100px);
+  gap: 1rem;
+  margin: auto;
+  padding: 30px;
 }
 
 .product-card {
-    border-radius: 4px;
-    box-shadow: 2px 2px 10px #5a5a5a70;
-    overflow: hidden;
+  border-radius: 4px;
+  box-shadow: 2px 2px 10px #5a5a5a70;
+  overflow: hidden;
 }
 
 .product-card .image-container {
-    width: 100%;
-    aspect-ratio: 1 / 1;
+  width: 100%;
+  aspect-ratio: 1 / 1;
 }
 
 .product-card .label {
-    height: 60px;
-    text-align: center;
-    display: grid;
-    grid-template-columns: auto;
-    gap: 3px;
+  height: 60px;
+  text-align: center;
+  display: grid;
+  grid-template-columns: auto;
+  gap: 3px;
 }
 
 .product-name {
-    font-size: 1.5rem;
-    font-weight: 400;
+  font-size: 1.5rem;
+  font-weight: 400;
 }
 
 section#shop .button {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 10px;
 }
 
 section#shop .button .btn {
-    background: var(--blue);
-    color: var(--white);
-    border: none;
+  background: var(--blue);
+  color: var(--white);
+  border: none;
 }
 
 /* map */
 section#map .flex-grid {
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    width: min(100%, 900px);
-    margin: auto;
-    padding: 120px 0;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  width: min(100%, 900px);
+  margin: auto;
+  padding: 120px 0;
 }
 
 .mapouter {
-    position: relative;
-    text-align: right;
-    height: min(100%, 500px);
-    margin: auto;
+  position: relative;
+  text-align: right;
+  height: min(100%, 500px);
+  margin: auto;
 }
 
 .gmap_canvas {
-    overflow: hidden;
-    background: none !important;
-    height: 100%;
-    aspect-ratio: 1 / 1;
+  overflow: hidden;
+  background: none !important;
+  height: 100%;
+  aspect-ratio: 1 / 1;
 }
 
 .gmap_iframe {
-    height: 100% !important;
+  height: 100% !important;
 }
 
 section#map .locations {
-    padding: 10px;
+  padding: 10px;
+}
+
+section#map .locations:nth-child(even){
+    background: #5a5a5a;
 }
 
 section#map .locations h5 {
-    font-weight: 400;
-    font-size: 1.8rem;
-    text-align: left;
+  font-weight: 400;
+  font-size: 1.8rem;
+  text-align: left;
 }
 
 section#map .locations ul {
-    display: grid;
-    grid-template-columns: auto;
+  display: grid;
+  grid-template-columns: auto;
 }
 
 section#map .locations ul li {
-    list-style: none;
+  list-style: none;
 }
 
 section#map .locations ul li.shop-location {
-    display: grid;
-    grid-template-columns: auto;
-    margin: 10px 0;
-    padding: 10px;
+  display: grid;
+  grid-template-columns: auto;
+  margin: 10px 0;
+  padding: 10px;
 }
 
 section#map .locations ul li.shop-location .buttons {
-    font-size: 20px;
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    gap: 5px;
-    margin: 5px 0;
+  font-size: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 5px;
+  margin: 5px 0;
 }
 
 section#map .locations ul li.shop-location .buttons a {
-    height: 40px;
-    width: 40px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: black;
-    color: white;
-    border-radius: 3px;
+  height: 40px;
+  width: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: black;
+  color: white;
+  border-radius: 3px;
 }
